--- a/ARG.html
+++ b/ARG.html
@@ -72,7 +72,7 @@
     </div>
 
     <div id="options" style="display: none;">
-        <h2>Escolha uma opção:</h2>
+        <h2>Escolha uma opÃ§Ã£o:</h2>
         <button onclick="mostrarSecao('documentos')">Documentos</button>
         <button onclick="mostrarSecao('emails')">Emails</button>
         <button onclick="mostrarSecao('arquivosConfidenciais')">Arquivos Confidenciais</button>
@@ -81,9 +81,9 @@
     <div id="documentos" class="section">
         <h2>Documentos</h2>
         <div class="scrollable">
-            <button onclick="mostrarTexto('Olá, aqui é a Maria. Criei este documento para falar sobre o nosso primeiro experimento, mas não consegui pensar em um nome adequado, então decidi chamá-lo com o nome da minha mãe, Charlot. Fiz um breve desenho usando as únicas cores de giz que eu tinha: azul, laranja, vermelho e verde. Enfim, eu a imprimi usando a impressora 3D na sala de artes e apliquei uma pequena dose de ervas mágicas nela. E FUNCIONOU! No entanto, não sei onde ela está; saiu correndo assim que ganhou vida, como se tivesse consciência.')">Documento 1</button>
-            <button onclick="mostrarTexto('Oi, eu não sei mais o meu nome; acredito que seja Maria ou Mariana, talvez? Criei um novo tipo de erva chamada \'erva suprema\' para não ter que usar mais a impressora 3D, que demorava horas. Então, é mais fácil usar pessoas para realizar nossos experimentos! Eu comi uma pequena dose da erva e estou enfrentando alguns problemas, como tontura, e minha pele está ficando totalmente amarela, mas isso é irrelevante! Por fim, usei um dos nossos professores, o Rafael, e funcionou, mas ele não se move; parece que virou um boneco gigante.')">Documento 2</button>
-            <button onclick="mostrarTexto('EU ENCONTREI A CHARLOT, MAS ELA ESTÁ MUITO ESTRANHA. ELA CITOU UM TAL DE JIMI OU JIMMY. ELA COMEU A ÚLTIMA ERVA SUPREMA QUE HAVIA RESTADO. NESTE MOMENTO, ESTOU SENDO PROCURADA POR UM COELHO GIGANTE CHAMADO PAULO! POR FAVOR, PAREM COM OS EXPERIMENTOS. EU SOU UM MONSTRO; NÃO DEVERÍAMOS TER FEITO ISSO!')">Documento 3</button>
+            <button onclick="mostrarTexto('Ola, aqui e a Maria. Criei este documento para falar sobre o nosso primeiro experimento, mas nao consegui pensar em um nome adequado, entao decidi chama-lo com o nome da minha mae, Charlot. Fiz um breve desenho usando as unicas cores de giz que eu tinha: azul, laranja, vermelho e verde. Enfim, eu a imprimi usando a impressora 3D na sala de artes e apliquei uma pequena dose de ervas magicas nela. E FUNCIONOU! No entanto, nao sei onde ela esta; saiu correndo assim que ganhou vida, como se tivesse consciencia.')">Documento 1</button>
+            <button onclick="mostrarTexto('Oi, eu nao sei mais o meu nome; acredito que seja Maria ou Mariana, talvez? Criei um novo tipo de erva chamada \'erva suprema\' para nao ter que usar mais a impressora 3D, que demorava horas. Entao, e mais facil usar pessoas para realizar nossos experimentos! Eu comi uma pequena dose da erva e estou enfrentando alguns problemas, como tontura, e minha pele esta ficando totalmente amarela, mas isso e irrelevante! Por fim, usei um dos nossos professores, o Rafael, e funcionou, mas ele nao se move; parece que virou um boneco gigante.')">Documento 2</button>
+            <button onclick="mostrarTexto('EU ENCONTREI A CHARLOT, MAS ELA ESTA MUITO ESTRANHA. ELA CITOU UM TAL DE JIMI OU JIMMY. ELA COMEU A ULTIMA ERVA SUPREMA QUE HAVIA RESTADO. NESTE MOMENTO, ESTOU SENDO PROCURADA POR UM COELHO GIGANTE CHAMADO PAULO! POR FAVOR, PAREM COM OS EXPERIMENTOS. EU SOU UM MONSTRO; NAO DEVERIAMOS TER FEITO ISSO!')">Documento 3</button>
         </div>
         <br>
         <button onclick="voltar()">Voltar</button>
@@ -92,9 +92,9 @@
     <div id="emails" class="section">
         <h2>Emails</h2>
         <div class="scrollable">
-            <button onclick="mostrarTexto('Olá, senhora Wymell, aqui é o Professor José! Estou muito feliz por me permitir trabalhar com a Maria. Neste momento, acabei de montar a impressora 3D e vamos tentar criar nosso primeiro experimento!')">Email 1</button>
-            <button onclick="mostrarTexto('Olá, Senhora Wymell, aqui é o José novamente. A Maria desenhou o que parece ser um cupcake para testarmos a impressora 3D!')">Email 2</button>
-            <button onclick="mostrarTexto('Olá, Senhora Wymell, aqui é o José, e eu ADOREI a ideia de criar experimentos. Agora, vou me tornar um! Teremos que realizar diversos estudos para que eu faça um desenho, imprima-o na impressora 3D e aplique meu DNA, além das ervas mágicas. Acredito que isso funcione. Estou ansioso pela vida eterna!')">Email 3</button>
+            <button onclick="mostrarTexto('Ola, senhora Wymell, aqui e o Professor Jose! Estou muito feliz por me permitir trabalhar com a Maria. Neste momento, acabei de montar a impressora 3D e vamos tentar criar nosso primeiro experimento!')">Email 1</button>
+            <button onclick="mostrarTexto('Ola, Senhora Wymell, aqui e o Jose novamente. A Maria desenhou o que parece ser um cupcake para testarmos a impressora 3D!')">Email 2</button>
+            <button onclick="mostrarTexto('Ola, Senhora Wymell, aqui e o Jose, e eu ADOREI a ideia de criar experimentos. Agora, vou me tornar um! Teremos que realizar diversos estudos para que eu faca um desenho, imprima-o na impressora 3D e aplique meu DNA, alem das ervas magicas. Acredito que isso funcione. Estou ansioso pela vida eterna!')">Email 3</button>
         </div>
         <br>
         <button onclick="voltar()">Voltar</button>
@@ -103,9 +103,9 @@
     <div id="arquivosConfidenciais" class="section">
         <h2>Arquivos Confidenciais</h2>
         <div class="scrollable">
-            <button onclick="mostrarTexto('Professora Rafaela, 45 anos, professora de Matemática, foi usada para testar a erva suprema. Infelizmente, houve uma falha, e agora ela parece uma espécie de pássaro quadrado amarelo com bico azul. Ela não se move, mas aparenta estar consciente, presa nessa condição para sempre.')">Arquivo 1</button>
-            <button onclick="mostrarTexto('Professor José, 38 anos, professor de Informática, foi utilizado para criar um experimento e ofereceu seu DNA. O experimento foi bem-sucedido!')">Arquivo 2</button>
-            <button onclick="mostrarTexto('A creche: Nós, da equipe corporativa, decidimos criar uma creche para aumentar nosso alcance com as crianças pequenas! Porém, vamos ser inovadores. Precisamos de algo único em comparação com outras creches, então decidimos adicionar três mascotes para atrair as crianças. Contudo, para dar vida a esses mascotes, precisamos de 3 pessoas.')">Arquivo 3</button>
+            <button onclick="mostrarTexto('Professora Rafaela, 45 anos, professora de Matematica, foi usada para testar a erva suprema. Infelizmente, houve uma falha, e agora ela parece uma especie de passaro quadrado amarelo com bico azul. Ela nao se move, mas aparenta estar consciente, presa nessa condicao para sempre.')">Arquivo 1</button>
+            <button onclick="mostrarTexto('Professor Jose, 38 anos, professor de Informatica, foi utilizado para criar um experimento e ofereceu seu DNA. O experimento foi bem-sucedido!')">Arquivo 2</button>
+            <button onclick="mostrarTexto('A creche: Nos, da equipe corporativa, decidimos criar uma creche para aumentar nosso alcance com as criancas pequenas! Porem, vamos ser inovadores. Precisamos de algo unico em comparacao com outras creches, entao decidimos adicionar tres mascotes para atrair as criancas. Contudo, para dar vida a esses mascotes, precisamos de 3 pessoas.')">Arquivo 3</button>
         </div>
         <br>
         <button onclick="voltar()">Voltar</button>
